# Rasterizer

./: .gitignore  CMakeLists.txt  README.md
includes/: Camera.h  Constants.h  DIRECTIONALLIGHT.H  DeferredRasterizer.h  ForwardRasterizer.h  GeometryObject.h  Light.h  Material.h  Matrix.h  OrthographicCamera.h  PERSPECTIVECAMERA.H  Point2D.h  Point3D.h  PointLight.h  RGBColor.h  Rasterizer.h  Renderer.h  ShadowMap.h  Triangle.h  Utils.h  VECTOR2D.H  Vector3D.h  World.h
lib/: CMakeLists.txt
src/: Camera.cpp  DeferredRasterizer.cpp  DirectionalLight.cpp  ForwardRasterizer.cpp  GeometryObject.cpp  Light.cpp  Material.cpp  Matrix.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Point2D.cpp  Point3D.cpp  PointLight.cpp  RGBColor.cpp  Rasterizer.cpp  Renderer.cpp  ShadowMap.cpp  Vector2D.cpp  Vector3D.cpp  World.cpp  main.cpp
